--- a/install
+++ b/install
@@ -5,7 +5,7 @@ BOLD=$(tput bold)
 
 function install {
     local profile="$1"    
-    local target="profiles/$profile"
+    local target="src/bash/profiles/$profile"
 
     echo "Installing $BOLD$profile$NORM profile..."
     echo
